# noit-VP-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml
src/noit_documenting_data_flow/: __init__.py  audit.py  cli.py  generator.py  mcp_server.py  templates.py
tests/: conftest.py  test_audit.py  test_audit_drift.py  test_cli_audit.py  test_mcp_audit.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: activeSet.ts  diagramTreeProvider.ts  extension.ts  injectCommand.ts  mcpClient.ts
