[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noit-documenting-data-flow"
version = "1.1.0"
description = "Documenting Data Flow - STAR diagram pieces → interactive viewer + overview. By NOit (noit2.com)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NOit", email = "hello@noit2.com"}
]
keywords = [
    "documentation",
    "architecture",
    "mermaid",
    "diagrams",
    "mcp",
    "mkdocs",
    "data-flow",
    "star-pattern"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-roamlinks-plugin>=0.3",
]

[project.urls]
Homepage = "https://noit2.com"
Repository = "https://github.com/noit/noit-documenting-data-flow"
Issues = "https://github.com/noit/noit-documenting-data-flow/issues"
Documentation = "https://noit2.com/docs"

[project.scripts]
noit-diagram-rollup = "noit_documenting_data_flow.cli:main"
noit-mcp-server = "noit_documenting_data_flow.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/**/*", "schemas/**/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "W", "UP", "B", "C4", "ARG", "PTH", "SIM", "TID", "TRY"]
ignore = ["S101", "ARG001", "ARG002"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"